--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
   "main": "index.js",
   "scripts": {
     "build": "NODE_ENV=production webpack",
-    "lint": "eslint ./src --ext .js",
-    "dev":  "NODE_ENV=development webpack-dev-server --content-base dist --hot",
-    "start":  "npm run lint && npm run dev"
+    "lint": "eslint ./src --ext .js --fix",
+    "dev": "NODE_ENV=development webpack-dev-server --content-base dist --hot",
+    "start": "npm run lint && npm run dev"
   },
   "repository": {
     "type": "git",
